unpackaged/objects/copado__Result__c.object
<CustomObject>
	<description>A unified place to look for job results when working with automations such as functions or Salesforce flows.</description>
	<fields>
		<fullName>copado__ApexCallback__c</fullName>
		<description>Field automatically updated by Copado that is used to link some processes together.</description>
		<inlineHelpText>For now only internally used by Copado. It links some Copado processes together.</inlineHelpText>
		<label>Apex Callback</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__CreditSyncStatus__c</fullName>
		<description>An internal field to keep track of, if the function credit usage is synced</description>
		<label>Credit Sync Status</label>
		<length>80</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Custom_Function_Used_Credits__c</fullName>
		<defaultValue>0</defaultValue>
		<description>Copado credits used in the execution of the function.</description>
		<inlineHelpText>How many copado credits this process used.</inlineHelpText>
		<label>Copado Credits Used</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Custom_Function_Used_Minutes__c</fullName>
		<description>Time taken in minutes to execute the function.</description>
		<label>Function Used Minutes</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Deployment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup field to the deployment that triggered the result.</description>
		<inlineHelpText>Deployment Parent object that trigger the execution. (for legacy)</inlineHelpText>
		<label>Deployment</label>
		<referenceTo>copado__Deployment__c</referenceTo>
		<relationshipLabel>Results</relationshipLabel>
		<relationshipName>Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Description__c</fullName>
		<description>Description of the result record.</description>
		<label>Description</label>
		<length>32768</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copado__Duration__c</fullName>
		<description>Total duration in seconds of the job execution. This value can be used to track job performance.</description>
		<formula>IF(
  AND(
    NOT(ISBLANK(copado__Start_Time__c)),
    NOT(ISBLANK(copado__End_Time__c))
  ),
  (copado__End_Time__c - copado__Start_Time__c)*24*60*60,
  NULL
)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Display how long in seconds this process took to execute.</inlineHelpText>
		<label>Duration (in seconds)</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__End_Time__c</fullName>
		<description>Date and time when the job ended</description>
		<inlineHelpText>Date time when the job ended.</inlineHelpText>
		<label>End Time</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Error_Code__c</fullName>
		<description>Code that helps you quickly identify the issue.</description>
		<inlineHelpText>Only displays when there&apos;s an error. It shows the error code to identify the issue quickly.</inlineHelpText>
		<label>Error Code</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Error_Message__c</fullName>
		<description>Description of the error if the job has failed.</description>
		<inlineHelpText>Only displays when there&apos;s an error. It is used to inform the user about what failed during the execution of the associated process.</inlineHelpText>
		<label>Error Message</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Function_Worker_Size__c</fullName>
		<description>Computational resources available for function(Function credit limit is linked to size),  &apos;S&apos; =&gt; 1, &apos;M&apos; =&gt; 2, &apos;L&apos; =&gt; 4, &apos;XL&apos; =&gt; 8</description>
		<label>Function Worker Size</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>S</fullName>
				</value>
				<value>
					<fullName>M</fullName>
				</value>
				<value>
					<fullName>L</fullName>
				</value>
				<value>
					<fullName>XL</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Function__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup field to the function that triggered the result.</description>
		<inlineHelpText>Function Parent object that trigger the execution.</inlineHelpText>
		<label>Function</label>
		<referenceTo>copado__Function__c</referenceTo>
		<relationshipLabel>Results</relationshipLabel>
		<relationshipName>Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__JobStep__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>When this result is the outcome of a Job Step, that is executed as part of a Job Template, this field points to the Job Step. (note that Job Step and Function can be populated at the same time).</description>
		<inlineHelpText>When this result is the outcome of a Job Step, that is executed as part of a Job Template, this fields points to the Job Step. (note that Job Step and Function can be populated at the same time)</inlineHelpText>
		<label>Job Step</label>
		<referenceTo>copado__JobStep__c</referenceTo>
		<relationshipLabel>Results</relationshipLabel>
		<relationshipName>Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Job_Execution__c</fullName>
		<description>Record link shortcutting to Job Step&apos;s Job Execution</description>
		<formula>HYPERLINK(&quot;/&quot; &amp;  copado__JobStep__r.copado__JobExecution__c ,  copado__JobStep__r.copado__JobExecution__r.Name , &quot;_blank&quot;)</formula>
		<inlineHelpText>Record link shortcutting to Job Step&apos;s Job Execution</inlineHelpText>
		<label>Job Execution</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Job_Id__c</fullName>
		<description>Unique identifier used to map the result with an external job.</description>
		<externalId>true</externalId>
		<inlineHelpText>For devs to map this process with any other process that happens outside Copado.</inlineHelpText>
		<label>External Job ID</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Job_Type__c</fullName>
		<description>API name of the job that triggered the result. This information can be used for reporting purposes.</description>
		<inlineHelpText>API name of the parent Job. Used for reporting purposes mainly.</inlineHelpText>
		<label>Job API Name</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Integration</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Link__c</fullName>
		<description>Field used to link an external result to the Result record.</description>
		<inlineHelpText>Used if this execution result summary links to other result summary in any other system than Copado.</inlineHelpText>
		<label>External Result Link</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>copado__ParentId__c</fullName>
		<description>15-digit Id of the record that triggered the process that generated the result.</description>
		<inlineHelpText>15-digit ID of the record that triggered the process that generated the result. (e.g. A Job Step) We use a text field because Salesforce only allows one type in lookup fields.</inlineHelpText>
		<label>Context ID</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Parent__c</fullName>
		<formula>IF( !ISBLANK(copado__JobStep__c), copado__JobStep__r.copado__JobExecution__r.copado__Context__c,
    HYPERLINK(&quot;/&quot;&amp; IF( !ISBLANK(copado__Test__c), copado__Test__r.Id,
       IF(!ISBLANK(copado__User_Story__c), copado__User_Story__r.Id,
            IF(!ISBLANK(copado__Deployment__c), copado__Deployment__r.Id,
                IF(!ISBLANK(copado__Promotion__c), copado__Promotion__r.Id,
                    IF(!ISBLANK( copado__Function__c ), copado__Function__r.Id,
                        IF(!ISBLANK( copado__ParentId__c ), copado__ParentId__c, &apos;&apos;)))))
  ) ,

    IF( !ISBLANK(copado__Test__c), copado__Test__r.Name,
        IF(!ISBLANK(copado__User_Story__c), copado__User_Story__r.Name,
            IF(!ISBLANK(copado__Deployment__c), copado__Deployment__r.Name,
                IF(!ISBLANK(copado__Promotion__c), copado__Promotion__r.Name,
                    IF(!ISBLANK( copado__Function__c ), copado__Function__r.Name ,
                        IF(!ISBLANK( copado__ParentId__c ), &apos;Record : &apos; + copado__ParentId__c,&apos;&apos;)))))
  )))</formula>
		<label>Parent</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Progress_Status__c</fullName>
		<description>This status is used to track the current job activity.</description>
		<inlineHelpText>This status is used to track the current job activity.</inlineHelpText>
		<label>Progress Status</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Promotion__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup field to the promotion that triggered the result.</description>
		<inlineHelpText>Promotion Parent object that trigger the execution.</inlineHelpText>
		<label>Promotion</label>
		<referenceTo>copado__Promotion__c</referenceTo>
		<relationshipLabel>Results</relationshipLabel>
		<relationshipName>Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Result_Data__c</fullName>
		<description>Includes all the returned data by the process. This can be used by other processes.</description>
		<inlineHelpText>Includes all the returned data by the process. This can be used by other processes.</inlineHelpText>
		<label>Result Data</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Start_Time__c</fullName>
		<description>Date and time when the job started.</description>
		<inlineHelpText>Date time when the job started.</inlineHelpText>
		<label>Start Time</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<defaultValue>&quot;Not Started&quot;</defaultValue>
		<description>Status of the job execution.</description>
		<inlineHelpText>Current status of the result. Confirms if the result is pending or completed.</inlineHelpText>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Not Started</fullName>
					<default>true</default>
					<label>Not Started</label>
				</value>
				<value>
					<fullName>In Progress</fullName>
				</value>
				<value>
					<fullName>Success</fullName>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
				<value>
					<fullName>Cancelled</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Test__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>The Test parent object which triggered the execution.</description>
		<inlineHelpText>Test Parent object that trigger the execution.</inlineHelpText>
		<label>Test</label>
		<referenceTo>copado__Test__c</referenceTo>
		<relationshipLabel>Results</relationshipLabel>
		<relationshipName>Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Timeout__c</fullName>
		<description>If you want Copado to update the status to Failed if there is no response from the function’s job after a certain period of time (e.g., 60 minutes), you can define it here.</description>
		<inlineHelpText>Upper limit of allocated execution time. If the process takes longer than this, it will be automatically terminated.</inlineHelpText>
		<label>Timeout (minutes)</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup field to the user story that triggered the result.</description>
		<inlineHelpText>User Story Parent object that trigger the execution. (a commit for example)</inlineHelpText>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>Result</relationshipLabel>
		<relationshipName>Result</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Result</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Job_Type__c</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__Link__c</columns>
		<columns>copado__Description__c</columns>
		<columns>copado__Error_Message__c</columns>
		<columns>copado__Error_Code__c</columns>
		<columns>copado__Job_Id__c</columns>
		<columns>copado__User_Story__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>R{00000}</displayFormat>
		<label>Result Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Results</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>